Implementação do leiaute

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -34,6 +34,15 @@
          width: 60vw;
          text-align: center;
        }
+       @media (max-width: 720px) {
+                p {
+                  bottom: 30px;
+                  margin: 0 auto;
+                  position: absolute;
+                  text-align: center;
+                  width: 100%;
+                }
+              }       
    </style>
  </head>
  <body>
