--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
    <meta charset="utf-8">
+   <meta name='viewport' content='width=device-width, initial-scale=1'>
    <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
    <script src="/jquery.countdown.js"></script>
@@ -42,7 +43,7 @@
                   text-align: center;
                   width: 100%;
                 }
-              }       
+              }
    </style>
  </head>
  <body>
